WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269176
Fix field-sizing CSS invalidation
https://bugs.webkit.org/show_bug.cgi?id=269176
Summary
Fix field-sizing CSS invalidation
Luke Warlow
Reported
2024-02-11 13:29:09 PST
Ensure field-sizing CSS property updates invalidate layout correctly
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-18 13:30:13 PST
<
rdar://problem/123196610
>
Luke Warlow
Comment 2
2025-03-08 12:44:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/42139
EWS
Comment 3
2025-03-08 15:46:31 PST
Committed
291851@main
(cd15c70abb50): <
https://commits.webkit.org/291851@main
> Reviewed commits have been landed. Closing PR #42139 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug